# memcomp-bench

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  models.toml  pyproject.toml  tz.md
.github/workflows/: deploy-pages.yml
memcomp_bench/: _interactive_display.py  _interactive_prompts.py  _interactive_questionary.py  _logging.py  _resume.py  _resume_config.py  _run_loop.py  cli.py  config.py  context_hygiene.py  generator.py  generator_helpers.py  generator_runtime.py  interactive.py  model_registry.py  openrouter_client.py  persistence.py  persistence_runtime.py  prompt_templates.py  prompts.py
output/: conv_20260326_185127_marcus.jsonl  conv_20260326_185127_marcus.md  conv_20260326_185127_marcus_raw_ai_context.json  conv_20260326_185346_marcus.jsonl  conv_20260326_185346_marcus.md  conv_20260326_185346_marcus_raw_ai_context.json  conv_20260326_191048_anya.jsonl  conv_20260326_191048_anya.md  conv_20260326_191048_anya_raw_ai_context.json  conv_20260326_192650_anya.jsonl  conv_20260326_192650_anya.md  conv_20260326_192650_anya_raw_ai_context.json  conv_20260326_193448_james.jsonl  conv_20260326_193448_james.md  conv_20260326_193448_james_raw_ai_context.json  conv_20260326_194451_marcus.jsonl  conv_20260326_194451_marcus.md  conv_20260326_194451_marcus_raw_ai_context.json  conv_20260326_195106_marcus.jsonl  conv_20260326_195106_marcus.md  conv_20260326_195106_marcus_raw_ai_context.json  conv_20260326_195304_priya.jsonl  conv_20260326_195304_priya.md  conv_20260326_195304_priya_raw_ai_context.json  conv_20260326_195436_leo.jsonl  conv_20260326_195436_leo.md  conv_20260326_195436_leo_raw_ai_context.json  conv_20260326_200048_james.jsonl  conv_20260326_200048_james.md  conv_20260326_200048_james_raw_ai_context.json  conv_20260326_201339_michael.jsonl  conv_20260326_201339_michael.md  conv_20260326_201339_michael_raw_ai_context.json  conv_20260326_201459_michael.jsonl  conv_20260326_201459_michael.md  conv_20260326_201459_michael_raw_ai_context.json  conv_20260326_201746_michael.jsonl  conv_20260326_201746_michael.md  conv_20260326_201746_michael_raw_ai_context.json  conv_20260326_205340_michael.jsonl  (+163 more)
scripts/: check_function_length.py
src/: _logging.py  _resume.py  _run_loop.py  cli.py  config.py  free_models.py  generator.py  generator_helpers.py  openrouter_client.py  persistence.py  profiles.py  prompts.py
tests/: conftest.py
tests/functional/: test_concurrent_generation.py  test_interactive_cli.py  test_interactive_pty.py  test_interactive_resume_detail_esc.py  test_interactive_resume_verbose.py
tests/live/: test_free_models_network.py  test_proxy_e2e.py
tests/unit/: test_config_and_cli.py  test_free_models.py  test_generator_concurrency.py  test_generator_helpers.py  test_generator_loop.py  test_generator_loop_extra.py  test_generator_reasoning_contract.py  test_human_context_validation.py  test_interactive.py  (+11 more)
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+17 files in other folders)
