[project]
name = "memcomp-bench"
version = "0.1.0"
description = "Memory Compression Benchmark — measuring personality preservation through context compression"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
memcomp = "src.cli:main"

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = [
    "live: end-to-end tests that hit the local AI proxy (require MEMCOMP_BENCH_LIVE=1)",
    "network: tests that reach the public OpenRouter /models endpoint (require MEMCOMP_BENCH_NETWORK=1)",
]
