[project]
name = "memcomp-bench"
version = "0.1.0"
description = "Memory Compression Benchmark — measuring personality preservation through context compression"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "questionary>=2.0",
    "rich>=13.0",
    "simple-term-menu>=1.6.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
]
dev = [
    "pre-commit>=4",
    "ruff>=0.15",
]

[project.scripts]
memcomp = "memcomp_bench.cli:main"

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = [
    "live: end-to-end tests that hit the local AI proxy (require MEMCOMP_BENCH_LIVE=1)",
    "network: tests that reach the public OpenRouter /models endpoint (require MEMCOMP_BENCH_NETWORK=1)",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long (rich format strings and prompt text are kept readable)
    "E741",   # ambiguous variable name (existing code uses `l` in comprehensions)
    "F841",   # local variable assigned but never used (side-effect assignments)
]

[tool.ruff.lint.isort]
known-first-party = ["memcomp_bench"]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["memcomp_bench"]

[tool.coverage.report]
fail_under = 87
show_missing = true
skip_empty = true
